# feddit_archivieren

./: .gitignore  .nvim-dap.lua  Cargo.toml  Makefile  README.md  feddit_archivieren.zsh
src/: client.rs  daemon.rs  helpers.rs  main.rs  settings.rs
src/client/: main.rs
src/daemon/: main.rs
