[package]
name = "feddit_archivieren"
version = "0.0.43"
edition = "2021"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "daemon"
path = "src/daemon.rs"

[dependencies]
daemonize = "0.5.0"
users = "0.11.0"
colored = "2.1.0"
chrono = "0.4.38"
reqwest = "0.12.4"
tokio = { version = "1.37.0", features = ["full"] }
clap = { version = "4.5.4", features = ["derive"] }
toml = "0.8.13"
git2 = "0.18.3"
